routing-service/base-manifest/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # Make Sure that this is a larger value than client/downstream idle timeout.
          # Our ingress is configured with 5s idleTimeout so adding 5s as buffer to ensure downstream always cleanup first.
          # If you update this revisit the terminationGracePeriodSeconds in the web/worker spec.
          common_http_protocol_options:
            idle_timeout: 5s
          access_log:
            - name: envoy.file_access_log
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                json_format:
                  start_time: "%START_TIME%"
                  request_method: "%REQ(:METHOD)%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                  downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                  protocol: "%PROTOCOL%"
                  response_code: "%RESPONSE_CODE%"
                  response_flags: "%RESPONSE_FLAGS%"
                  response_code_details: "%RESPONSE_CODE_DETAILS%"
                  connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                  bytes_received: "%BYTES_RECEIVED%"
                  bytes_sent: "%BYTES_SENT%"
                  duration: "%DURATION%"
                  response_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                  x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                  user_agent: "%REQ(USER-AGENT)%"
                  request_id: "%REQ(X-REQUEST-ID)%"
                  request_authority: "%REQ(:AUTHORITY)%"
                  upstream_host: "%UPSTREAM_HOST%"
                  upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                  upstream_cluster: "%UPSTREAM_CLUSTER%"
                  upstream_protocol: "%UPSTREAM_PROTOCOL%"
                  requested_server_name: "%REQUESTED_SERVER_NAME%"
                  route_name: "%ROUTE_NAME%"
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: monolith-backend
                  timeout: "60s"
                  idle_timeout: "30s"
                  retry_policy:
                    retry_on: "connect-failure,gateway-error"
                    num_retries: 10
                    retry_back_off:
                      base_interval: "10s"
                      max_interval: "30s"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  # - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: monolith-backend
    connect_timeout: 2.5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          # Envoy upstream is configured as a single hostname, but this may be an ALB or NLB fronting multiple endpoints (e.g., IPs of Ingress Pods).
          # Because Envoy reuses connections (default HTTP/1.1 behavior), it may not evenly distribute load when endpoints are added behind an NLB after connections have been established.
          # These settings recycle connections to help NLBs balance traffic across all endpoints **eventually**. 
          max_requests_per_connection: 5000
          max_connection_duration: 1800s
          # This helps upstream that properly terminate/drain/rotate do this faster as downstream (this Envoy) will close the connection after the idle timeout.
          idle_timeout: 30s
        explicit_http_config:
          http_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_probes: 5
        keepalive_time: 30
        keepalive_interval: 30
    health_checks:
      timeout: 2s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      http_health_check:
        path: /health
    load_assignment:
      cluster_name: monolith-backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: k8s-web-pool
                port_value: 80
